Read WebUSB landing page even if allowed origin read fails

Now that support for the GET_ALLOWED_ORIGINS request is optional WebUSB
devices may only support the GET_URL request used for reading the
landing page from the device. This patch fixes the descriptor reading
logic so that this is supported.

(Note, the logic to send the GET_ALLOWED_ORIGINS request will be removed
entirely as part of issue 711443.)

BUG=721546

Review-Url: https://codereview.chromium.org/2876463008
Cr-Commit-Position: refs/heads/master@{#471141}

Former-commit-id: 84869d699fe82560ca9ac3f30c5b959110af30bf